Added prefix support for SimplyRegister annotations, added FluidIngredient.join to allow mixing multiple ingredients, updated FluidStackIngredient to allow multiple fluids with new API.